// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "src/main/proto/wfa/measurement/internal/kingdom/protocol_metadata.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message ReportDetails {
  // Before a Report can be started, each Duchy involved needs to confirm its
  // readiness. This holds the list of Duchies that are ready.
  repeated string confirmed_duchies = 1;

  // Only present for successfully finished Reports.
  message Result {
    int64 reach = 1;

    // Histogram: maps frequencies to ratios. For example, a map entry
    // {key: 4 value: 0.333} means that 33.3% of all users were exposed 4 times.
    map<int64, double> frequency = 2;
  }
  Result result = 2;

  // Denormalized set of Requisition identifiers.
  message ExternalRequisitionKey {
    int64 external_data_provider_id = 1;
    int64 external_campaign_id = 2;
    int64 external_requisition_id = 3;

    // The Duchy that fulfilled this requisition, if it is fulfilled.
    string duchy_id = 4;
  }
  repeated ExternalRequisitionKey requisitions = 3;

  oneof protocol_metadata {
    LiquidLegionsV2MetaData liquid_legions_v2 = 4;
  }

  // TODO(wangyaopw): delete combined_public_key_resource_id and its usage.
  string combined_public_key_resource_id = 5;
}
